[metadata]
name = pydantic-visible-fields
version = 0.1.0
description = Field-level visibility control for Pydantic models
long_description = file: README.md
long_description_content_type = text/markdown
author = Martin Alge
author_email = martin@alge.se
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
project_urls =
    Bug Tracker = https://github.com/Alge/pydantic-visible-fields/issues
    Documentation = https://github.com/Alge/pydantic-visible-fields#readme
    Source Code = https://github.com/Alge/pydantic-visible-fields

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pydantic>=2.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0
    black>=21.5b2
    isort>=5.0.0
    mypy>=0.812
    flake8>=3.9.2
doc =
    mkdocs>=1.1.2
    mkdocs-material>=7.1.5
    mkdocstrings>=0.15.2
